--- a/src/style.css
+++ b/src/style.css
@@ -49,3 +49,7 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+a, a:link, a:visited {
+	color: inherit;
+	text-decoration: inherit;
+}
